--- a/identifying_data_command.ipynb
+++ b/identifying_data_command.ipynb
@@ -1,6 +1,125 @@
-import pandas as pd
-
-df_data_check_command = pd.DataFrame({'function' : ['head()', 'tail()', 'shape', 'info()', 'describe()'],
-                                     'function_feature' : ['head part output', 'tail part output', 'the number of row & column output',
-                                                           'information output', 'summary of statistic output']})
-df_data_check_command
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d7cc6131-35b6-4344-bdf8-7fdfeb05e582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "67c6f446-632c-47fb-8b03-a8a60b7eab3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>function</th>\n",
+       "      <th>function_feature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>head()</td>\n",
+       "      <td>head part output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tail()</td>\n",
+       "      <td>tail part output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>shape</td>\n",
+       "      <td>the number of row &amp; column output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>info()</td>\n",
+       "      <td>information output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>describe()</td>\n",
+       "      <td>summary of statistic output</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     function                   function_feature\n",
+       "0      head()                   head part output\n",
+       "1      tail()                   tail part output\n",
+       "2       shape  the number of row & column output\n",
+       "3      info()                 information output\n",
+       "4  describe()        summary of statistic output"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data_check_command = pd.DataFrame({'function' : ['head()', 'tail()', 'shape', 'info()', 'describe()'],\n",
+    "                                     'function_feature' : ['head part output', 'tail part output', 'the number of row & column output',\n",
+    "                                                           'information output', 'summary of statistic output']})\n",
+    "df_data_check_command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b89c14-10ff-48af-a4fb-11de207a254c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
